--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SESSION_DOMAIN="localhost"
 SESSION_STATEFUL_DOMAINS="localhost"
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=
