Posts now send the correct url to images.

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,6 @@ SESSION_STATEFUL_DOMAINS="localhost"
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
+
+DEFAULT_POST_IMAGE="https://source.unsplash.com/200x200?caribbean"
+FILESYSTEM_DRIVER=public
